force-app/main/default/objects/MUSW__Equipment__c/MUSW__Equipment__c.object-meta.xml
<CustomObject>
    <label>Equipment</label>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>