force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__Address__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>MUSW__Address__c</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>