force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__CustomerId__c.field-meta.xml
<CustomField>
    <fullName>MUSW__CustomerId__c</fullName>
    <label>CustomerId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>