force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__Fixture_Color__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Fixture_Color__c</fullName>
    <label>Fixture Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Spun Aluminum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>