force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Geolocation__c</fullName>
    <inlineHelpText>Location of the equipment</inlineHelpText>
    <label>Geolocation</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>