force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__GIS_ID__c.field-meta.xml
<CustomField>
    <fullName>MUSW__GIS_ID__c</fullName>
    <label>GIS ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>