force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__GIS_ObjectID__c.field-meta.xml
<CustomField>
    <fullName>MUSW__GIS_ObjectID__c</fullName>
    <label>GIS ObjectID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>