force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__Install_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Install_Date__c</fullName>
    <inlineHelpText>The date the equipment was installed (Optional)</inlineHelpText>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>