force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>MUSW__LastModifiedDate__c</fullName>
    <label>LastModifiedDate</label>
    <type>Date</type>
</CustomField>