force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__LightType__c.field-meta.xml
<CustomField>
    <fullName>MUSW__LightType__c</fullName>
    <label>LightType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metal Halide</fullName>
            </value>
            <value>
                <fullName>Mercury</fullName>
            </value>
            <value>
                <fullName>Metal Halide Coated</fullName>
            </value>
            <value>
                <fullName>Mercury Coated</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>