force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__Manufacture_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Manufacture_Date__c</fullName>
    <inlineHelpText>The date of equipment manufacture</inlineHelpText>
    <label>Manufacture Date</label>
    <type>Date</type>
</CustomField>