force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Manufacturer__c</fullName>
    <inlineHelpText>The company name of the manufacturer of the equipment</inlineHelpText>
    <label>Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>