force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__MeterInstallDate__c.field-meta.xml
<CustomField>
    <fullName>MUSW__MeterInstallDate__c</fullName>
    <label>MeterInstallDate</label>
    <type>Date</type>
</CustomField>