force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__MeterSize__c.field-meta.xml
<CustomField>
    <fullName>MUSW__MeterSize__c</fullName>
    <label>MeterSize</label>
    <length>50</length>
    <type>Text</type>
</CustomField>