force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__Model__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Model__c</fullName>
    <inlineHelpText>The manufacturer&apos;s model name</inlineHelpText>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>