force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__ModuleInstallDate__c.field-meta.xml
<CustomField>
    <fullName>MUSW__ModuleInstallDate__c</fullName>
    <label>ModuleInstallDate</label>
    <type>Date</type>
</CustomField>