force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__ModuleSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>MUSW__ModuleSerialNumber__c</fullName>
    <label>ModuleSerialNumber</label>
    <length>30</length>
    <type>Text</type>
</CustomField>