force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Serial_Number__c</fullName>
    <inlineHelpText>The serial number on the equipment</inlineHelpText>
    <label>Serial Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>