force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__SubType__c.field-meta.xml
<CustomField>
    <fullName>MUSW__SubType__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Equipment_SubTypes</valueSetName>
    </valueSet>
</CustomField>