force-app/main/default/objects/MUSW__Equipment__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <inlineHelpText>The type of equipment (Required - No default).</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Equipment_Types</valueSetName>
    </valueSet>
</CustomField>